Added clear button
Added button to clear time information displayed on screen

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <div class="buttons">
       <button id="start-button" onclick="startButton()">Start</button>
       <button id="end-button" onclick="endButton()">End</button>
+      <button id="clear-button" onclick="clearButton()">Clear</button>
     </div>
     <div class="timer-results">
-      <p id="start-time">Start time:</p>
-      <p id="end-time">End time:</p>
+      <p id="start-time">Start time: N/A</p>
+      <p id="end-time">End time: N/A</p>
       <p id="display-time">Time elapsed: 0D:0H:0M</p>
     </div>
   </body>
