--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title of the document</title>
+    <title>Tracker App #1</title>
   </head> 
 
   <body>
     <script src="script.js"></script>
+    <div>
+      <h1>Tracker App #1</h1>
+      <p>Welcome to my tracker App!</p>
+    </div>
     <div class="buttons">
       <button id="start-button" onclick="startButton()">Start</button>
       <button id="end-button" onclick="endButton()">End</button>
