Added seconds to default display

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="timer-results">
       <p id="start-time">Start time: N/A</p>
       <p id="end-time">End time: N/A</p>
-      <p id="display-time">Time elapsed: 0D:0H:0M</p>
+      <p id="display-time">Time elapsed: 0D:0H:0M:0S</p>
     </div>
   </body>
 </html>
